<resources>
    <string name="app_name">WanAndroid</string>
    <string name="ic_action_search">search</string>
    <string name="ic_action_share">share</string>
    <string name="home_page">home</string>
    <string name="knowledge_system">knowledge</string>
    <string name="navigation_page">navigation</string>
    <string name="project_page">project</string>
    <string name="article_tag_top">top</string>
    <string name="article_author">Author : %s</string>
    <string name="article_classify">classify : %s / %s</string>
    <string name="article_tag_new">New</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="collection">Collections</string>
    <string name="go_to_register">No account yet? Create one</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="empty_username">Please enter username</string>
    <string name="empty_password">Please enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_to_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="mismatch_password">password mismatch</string>
    <string name="wechat_public">wechat</string>
</resources>
