<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/other">

        <item
            android:id="@+id/collect"
            android:icon="@drawable/ic_action_favorite"
            android:title="@string/collection" />

<!--        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todo_default_24dp"
            android:title="@string/nav_todo" />-->


        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>